--- a/vercel.json
+++ b/vercel.json
@@ -7,3 +7,12 @@
     }
   ]
 }
+{
+  "redirects": [
+    {
+      "source": "/stream",
+      "destination": "https://bio.link/alone_spider",
+      "permanent": true
+    }
+  ]
+}
