--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/stream",
-      "destination": "https://bio.link/alone_spider",
+      "destination": "https://raw.githubusercontent.com/ACM-Network/Tv.m3u/main/ACM%20Network.m3u",
       "permanent": true
     }
   ]
