--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "redirects": [
-    {
-      "source": "/stream",
-      "destination": "https://raw.githubusercontent.com/ACM-Network/Tv.m3u/main/ACM%20Network.m3u",
-      "permanent": true
-    }
+  "routes": [
+    { "src": "/m3u", "dest": "/api/redirect" }
   ]
 }
