--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "src": "https://tv-m3u.vercel.app/m3u",
+      "src": "/m3u",
       "dest": "/api/redirect"
     }
   ]
