--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,9 @@
 {
   "redirects": [
     {
-      "source": "/m3u8",
-      "has": [
-        {
-          "type": "header",
-          "key": "user-agent",
-          "value": "(VLC|OTT-Navigator|Media)"
-        }
-      ],
-      "destination": "https://github.com/ACM-Network/Tv.m3u/raw/main/ACM%20Network.m3u",
-      "permanent": false
-    },
-    {
-      "source": "/",
-      "destination": "https://bio.link/alone_spider",
-      "permanent": false
+      "source": "/stream",
+      "destination": "https://raw.githubusercontent.com/ACM-Network/Tv.m3u/main/ACM%20Network.m3u",
+      "permanent": true
     }
   ]
 }
