--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,11 @@
   "redirects": [
     {
       "source": "/stream",
+      "destination": "https://bio.link/alone_spider",
+      "permanent": true
+    },
+    {
+      "source": "/m3u",
       "destination": "https://raw.githubusercontent.com/ACM-Network/Tv.m3u/main/ACM%20Network.m3u",
       "permanent": true
     }
